# llms-co-writer

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  buildspec.yaml  pyproject.toml
.github/workflows/: testing-flow.yml
app/: dependencies.py  main.py
app/configs/: app_config.py
app/controllers/: bling_controller.py  health_checks_controller.py  openai_controller.py
app/models/: bling_models.py  health_checks_models.py  inference_records_models.py  openai_models.py
app/routers/: app_router.py
app/routers/v1/: bling_router.py  health_check_router.py  openai_router.py  v1_router.py
app/services/: auth_service.py  bling_client.py  dynamodb_client.py  openai_client.py  redis_client.py
docs/: ArchitectureDiagram.drawio
tests/: test_configs.py
tests/functional_tests/: conftest.py  ft_constants.py
tests/functional_tests/api/: test_bling_responses_ep.py  test_chat_completions_ep.py  test_health_checks_ep.py  test_open_ai_chat_completions_ep.py
tests/unit_tests/: conftest.py  test_main.py
tests/unit_tests/controllers/: test_bling_controller.py  test_health_checks_controller.py  test_openai_controller.py
tests/unit_tests/services/: test_auth_service.py  test_bling_client.py  test_dynamodb_client.py  test_openai_client.py  test_redis_client.py
tools/: healthcheck.py
